@@ -2,6 +2,6 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.QC">
-        <property name="version" value="--Data QC pipeline -- ver. 1.2.7 -- May 13, 2019 --" />
+        <property name="version" value="--Data QC pipeline   -- build Oct 17, 2019 --" />
     </bean>
 </beans>
