@@ -86,3 +86,19 @@ log4j.appender.updatedAnnots.Append=true
 log4j.appender.updatedAnnots.File=logs/updatedAnnots.log
 log4j.appender.updatedAnnots.layout=org.apache.log4j.PatternLayout
 log4j.appender.updatedAnnots.layout.ConversionPattern=%d %p [%c] - %m%n
+
+log4j.logger.related_qtls=INFO, related_qtls_summary, related_qtls
+log4j.appender.related_qtls_summary=org.apache.log4j.FileAppender
+log4j.appender.related_qtls_summary.Threshold=INFO
+log4j.appender.related_qtls_summary.File=logs/related_qtls_summary.log
+log4j.appender.related_qtls_summary.layout=org.apache.log4j.PatternLayout
+log4j.appender.related_qtls_summary.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.related_qtls_summary.Append=false
+
+log4j.appender.related_qtls=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.related_qtls.Threshold=INFO
+log4j.appender.related_qtls.File=logs/related_qtls.log
+log4j.appender.related_qtls.layout=org.apache.log4j.PatternLayout
+log4j.appender.related_qtls.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.related_qtls.DatePattern='.'yyyy-MM
+log4j.appender.related_qtls.Append=true
